<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preview1">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:src="@drawable/round_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:src="@drawable/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:fontFamily="@font/quicksandbold"
            android:text="@string/result"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/picture"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginTop="44dp"
            android:scaleType="fitCenter"
            app:saturation="1.0"
            app:contrast="1.0"
            app:brightness="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </LinearLayout>

    <TextView
        android:id="@+id/title1"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/title2"
        android:textAlignment="textStart"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/result1"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:fontFamily="@font/quicksandbold"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:text="3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:fontFamily="@font/quicksandsemibold"
        android:text="@string/result2"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/result2" />

    <TextView
        android:id="@+id/result2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:fontFamily="@font/quicksandbold"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:text="2-23"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:fontFamily="@font/quicksandsemibold"
        android:text="@string/result1"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/result1" />

    <TextView
        android:id="@+id/result3"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:fontFamily="@font/quicksandbold"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:text="21%"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:fontFamily="@font/quicksandsemibold"
        android:text="@string/result3"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/result3" />

<!--    <TextView-->
<!--        android:id="@+id/title2"-->
<!--        android:layout_width="280dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:fontFamily="@font/quicksandbold"-->
<!--        android:text="@string/title2"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textColor="@color/green"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"-->
<!--        app:layout_constraintStart_toStartOf="@+id/linearLayout2"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView6" />-->

<!--    <TextView-->
<!--        android:id="@+id/result4"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:fontFamily="@font/quicksandbold"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textColor="@color/green"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintStart_toStartOf="@+id/linearLayout2"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/title2" />-->

<!--    <TextView-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="20dp"-->
<!--        android:fontFamily="@font/quicksandsemibold"-->
<!--        android:text="@string/result2"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/green"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"-->
<!--        app:layout_constraintStart_toStartOf="@+id/linearLayout2"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/result5" />-->

<!--    <TextView-->
<!--        android:id="@+id/result5"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:fontFamily="@font/quicksandbold"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textColor="@color/green"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"-->
<!--        app:layout_constraintStart_toStartOf="@+id/linearLayout2"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/title2" />-->

<!--    <TextView-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="20dp"-->
<!--        android:fontFamily="@font/quicksandsemibold"-->
<!--        android:text="@string/result1"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/green"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintStart_toStartOf="@+id/linearLayout2"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/result4" />-->

<!--    <TextView-->
<!--        android:id="@+id/result6"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:fontFamily="@font/quicksandbold"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textColor="@color/green"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/title2" />-->

<!--    <TextView-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="20dp"-->
<!--        android:fontFamily="@font/quicksandsemibold"-->
<!--        android:text="@string/result3"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/green"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/result6" />-->

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="10dp"
            android:src="@drawable/send" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-12dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/quicksandsemibold"
            android:text="@string/share"
            android:textColor="@color/green"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/save"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="10dp"
            android:src="@drawable/save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/quicksandsemibold"
            android:text="@string/save"
            android:textColor="@color/green"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>