<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preview1">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="153dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn2"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:src="@drawable/round_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksandsemibold"
            android:text="@string/back"
            android:textColor="@color/green"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back">

        <TextView
            android:id="@+id/textView"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:fontFamily="@font/quicksandbold"
            android:text="@string/preview"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/picture"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_marginTop="12dp"
            android:scaleType="fitCenter"
            app:saturation="1.0"
            app:contrast="1.0"
            app:brightness="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btnCont"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/round_contrast_24"
        app:layout_constraintEnd_toStartOf="@+id/btnBright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ImageView
        android:id="@+id/btnBright"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/round_settings_brightness_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ImageView
        android:id="@+id/btnSat"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/opacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBright"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/txtSat"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="0"
        android:text="Saturation"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sat"
        android:layout_width="88dp"
        android:alpha="0"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSat"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtCont"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Contrast"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cont"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSat"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtBright"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="0"
        android:text="Brightness"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bright"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSat"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBarSat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:layout_marginBottom="44dp"
        android:alpha="0"
        android:splitTrack="false"
        android:progressDrawable="@drawable/seekbar_style"
        android:thumb="@drawable/seekbar_custom_thumb"
        app:layout_constraintBottom_toTopOf="@+id/calculate" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBarCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:max="100"
        android:progress="50"
        android:alpha="0"
        android:splitTrack="false"
        android:progressDrawable="@drawable/seekbar_style"
        android:thumb="@drawable/seekbar_custom_thumb"
        app:layout_constraintBottom_toTopOf="@+id/calculate" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBarBright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:alpha="0"
        android:max="100"
        android:progress="50"
        android:splitTrack="false"
        android:progressDrawable="@drawable/seekbar_style"
        android:thumb="@drawable/seekbar_custom_thumb"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/calculate"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:padding="10dp"
            android:src="@drawable/collapse" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/quicksandsemibold"
            android:text="@string/calculate"
            android:textColor="@color/green"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>